# binary_size_comparison

./: Cargo.toml  README.md  build.rs
src/: main.rs  std.rs
